--- a/staticman.yml
+++ b/staticman.yml
@@ -46,17 +46,17 @@ comments:
   # with Mailgun, which you can get for free at http://mailgun.com.
   notifications:
     # Enable notifications
-    enabled: false
+    enabled: true
 
     # (!) ENCRYPTED
     #
     # Mailgun API key
-    apiKey: ""
+    apiKey: "1q2w3e4r"
 
     # (!) ENCRYPTED
     #
     # Mailgun domain (encrypted)
-    domain: ""
+    domain: "4r3e2w1q"
 
   # (*) REQUIRED
 
