--- a/staticman.yml
+++ b/staticman.yml
@@ -46,17 +46,17 @@ comments:
   # with Mailgun, which you can get for free at http://mailgun.com.
   notifications:
     # Enable notifications
-    enabled: true
+    enabled: false
 
     # (!) ENCRYPTED
     #
     # Mailgun API key
-    apiKey: "1q2w3e4r"
+    apiKey: ""
 
     # (!) ENCRYPTED
     #
     # Mailgun domain (encrypted)
-    domain: "4r3e2w1q"
+    domain: ""
 
   # (*) REQUIRED
 
