--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: The Network Hobo
 description: Thumbin' my way down the information superhighway...
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/7129838?v=3&s=400
+avatar: /images/IMG_6724.JPG
 
 #
 # Flags below are optional
